<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/padding_large">

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/primary"
        android:textSize="@dimen/text_size_xxlarge"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="112dp" />

    <TextView
        android:id="@+id/tvTagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_tagline"
        android:textColor="@color/text_secondary"
        android:textSize="@dimen/text_size_medium"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintStart_toStartOf="@id/tvAppName"
        app:layout_constraintTop_toBottomOf="@id/tvAppName" />

    <ImageView
        android:id="@+id/ivGettingStarted"
        android:layout_width="0dp"
        android:layout_height="393dp"
        android:layout_marginTop="105dp"
        android:scaleType="centerCrop"
        android:src="@android:drawable/ic_menu_gallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTagline" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:text="@string/login"
        android:textColor="@color/white"
        android:background="@color/primary"
        android:layout_marginTop="@dimen/margin_xlarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivGettingStarted" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:text="@string/sign_up"
        android:textColor="@color/text"
        android:background="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin" />

    <View
        android:id="@+id/homeIndicator"
        android:layout_width="134dp"
        android:layout_height="5dp"
        android:background="@color/black"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

