<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/enjoy"
        android:textColor="#101828"
        android:textSize="@dimen/text_size_xlarge"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivSuccess"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@android:drawable/ic_dialog_info"
        android:layout_marginTop="237dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <TextView
        android:id="@+id/tvCongratulations"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/congratulations_title"
        android:textColor="@color/text"
        android:textSize="@dimen/text_size_xxlarge"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:layout_marginHorizontal="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivSuccess" />

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="318dp"
        android:layout_height="wrap_content"
        android:text="@string/congratulations_message"
        android:textColor="@color/text"
        android:textSize="@dimen/text_size_medium"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin_xlarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCongratulations" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:text="@string/next"
        android:textColor="@color/white"
        android:background="@color/primary"
        android:layout_marginBottom="66dp"
        android:layout_marginHorizontal="@dimen/margin_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/homeIndicator"
        android:layout_width="134dp"
        android:layout_height="5dp"
        android:background="@color/black"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnNext" />

</androidx.constraintlayout.widget.ConstraintLayout>

